# boubox_stm32

./: .gitmodules  CMakeLists.txt
inc/: pin.hpp
src/: blinky.cpp
